// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas con el componente GifExpertApp Debe mostrar una lista de categorías 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="saint seiya"
      key="saint seiya"
    />
    <GifGrid
      category="one punch"
      key="one punch"
    />
    <GifGrid
      category="dragon ball z"
      key="dragon ball z"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas con el componente GifExpertApp Debe ser igual que el snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
